// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`JsonField display invalid message 1`] = `
<FormGroup
  className="InputField"
  color=""
  tag="div"
>
  <div
    className=""
  >
    <FormGroup
      tag="div"
    >
      <div
        className="controls"
      >
        <Input
          id="id-input-2"
          invalid={true}
          onChange={[Function]}
          rows="6"
          type="textarea"
          value="\\"value\\""
        />
        <Errors>
          Invalid JSON : changes will not be saved until the JSON is fixed
        </Errors>
      </div>
    </FormGroup>
  </div>
</FormGroup>
`;

exports[`JsonField should render input 1`] = `
<JsonField
  onChange={[Function]}
  type="text"
  value="value"
>
  <FormGroup
    className="InputField"
    color=""
    tag="div"
  >
    <div
      className="InputField form-group"
      color=""
    >
      <div
        className=""
      >
        <FormGroup
          tag="div"
        >
          <div
            className="form-group"
          >
            <div
              className="controls"
            >
              <Input
                id="id-input-1"
                onChange={[Function]}
                rows="6"
                type="textarea"
                value="\\"value\\""
              >
                <textarea
                  className="form-control"
                  id="id-input-1"
                  onChange={[Function]}
                  rows="6"
                  value="\\"value\\""
                />
              </Input>
            </div>
          </div>
        </FormGroup>
      </div>
    </div>
  </FormGroup>
</JsonField>
`;
